Change default baseurl for GH username change

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ name: Red Hand of Doom - Campaign Journal
 pygments: true
 safe: true
 lsi: false
-baseurl: http://jacobwalker0814.github.com/campaign-journal
+baseurl: http://jcbwlkr.github.com/campaign-journal
